# video-dataset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-beta.yml  publish.yml  tests.yml
tests/: helpers.py  test_annotations_types.py  test_padder.py  test_video_dataset.py  test_video_dataset_initialization.py
video_dataset/: __init__.py  annotations.py  dataset.py  padder.py  preprocessor.py  utils.py  video.py
