[project]
name = "video-dataset"
version = "0.2.9"
description = "A pytorch compatible video dataset that is fully customizable."
authors = [
    {name = "raideno56",email = "nadirkichou@hotmail.fr"}
]
maintainers = [
    {name = "raideno56",email = "nadirkichou@hotmail.fr"}
]
homepage = "https://raideno.github.io/video-dataset/"
documentation = "https://raideno.github.io/video-dataset/"
repository = "https://github.com/raideno/video-dataset"
keywords = ["pytorch-video-dataset", "pytorch", "video-dataset"]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=1.9.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]
packages = [
    {include = "video_dataset", from = "."}
]
include = [
    { path = "README.md", format = "sdist" },
    { path = "README.md", format = "wheel" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"